# todo-django-react

./: docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/core/: admin.py  models.py
backend/core/api/: serializers.py  urls.py  views.py
backend/core/fixtures/: tasks.json  users.json
backend/core/migrations/: 0001_initial.py  0002_task.py
backend/core/tests/: conftest.py  test_api.py  test_models.py
backend/todo/: settings.py  urls.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Task.js  Tasks.js
